--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                   </div>
                 </form>
               </div>
+            </div>
           </div>
         </div>
       </div>
@@ -175,7 +176,9 @@
           <div class="col-lg-1 d-none d-lg-block"></div>
           <div class="col-lg-7 align-self-center">
             <p class="para-size">
-              Scrub DNC allows you to compare DNC list files against your in-house list files to determine which phone numbers exist on the Do Not Call list.
+              Scrub DNC allows you to compare DNC list files against your
+              in-house list files to determine which phone numbers exist on the
+              Do Not Call list.
             </p>
           </div>
         </div>
@@ -189,7 +192,9 @@
         <div class="row justify-content-center">
           <div class="col-md-10 col-lg-8 text-center">
             <h2 class="heading text-white">
-              DNC Scrubbing doesn't have to break your budget. We have affordable subscription plans that can accommodate companies of all sizes.
+              DNC Scrubbing doesn't have to break your budget. We have
+              affordable subscription plans that can accommodate companies of
+              all sizes.
             </h2>
           </div>
         </div>
@@ -317,7 +322,7 @@
       </div>
     </section>
     <!-- ====================================== End How It Works  Here ====================================== -->
-    
+
     <!-- ============================= Start footer Section Here ============================= -->
     <footer>
       <div class="container pt-5">
@@ -331,7 +336,9 @@
                   class="img-fluid"
               /></a>
               <p class="para-size text-white py-5">
-                Getting Consent to Contact your customers has never been more secure and easy to do. Build trust with your customers with ConsentSMS.com
+                Getting Consent to Contact your customers has never been more
+                secure and easy to do. Build trust with your customers with
+                ConsentSMS.com
               </p>
             </div>
             <div class="d-none d-lg-block col-lg-4"></div>
